--- a/src/pages/fila/fila.scss
+++ b/src/pages/fila/fila.scss
@@ -1,3 +1,7 @@
 page-fila {
 
 }
+
+.circle{width:50%;height:0;font-size:2000%;color:#fff;text-align:center;line-height:0;padding:25% 0;border-radius:50%;background:#09f}
+
+
